Fix T40059: Switching windows ignores held modifier keys

Re-enable workaround (USE_WIN_ACTIVATE) which should no longer cause
problems as of [0].

[0]: 37d835f0bca28a7cbf577385d9828636e7811cc5